--- a/css/app.css
+++ b/css/app.css
@@ -81,7 +81,7 @@ body
     left: 0;
     width: 279px;
     height: 600px;
-    margin: 0 auto;
+    margin: 84px auto;
     transform: translateY(-50%);
 }
 
